# arkada

./: CMakeLists.txt  Mypanel.cpp  Mypanel.h  Pattern.h  game.cpp  game.h  main.cpp  patron.h  ship.h  ship1.cpp  ship1.h  ship2.cpp  ship2.h  ship3.cpp  ship3.h
MyPanel/: CMakeLists.txt
game/: CMakeLists.txt
